# pdfium-binaries

./: .gitignore  build.sh
.github/workflows/: build.yml
patches/wasm/: build.patch  emscripten.gn  emscripten.gni  pdfium.patch  toolchain.gn
steps/: 01-install.sh  03-patch.sh  05-configure.sh  06-build.sh
